--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -2760,17 +2760,24 @@
 
                     // Sked button: fill DX field
                     // Sked button: fill DX field AND refresh popup immediately
+                    // Sked button: fill DX field AND update popup content instantly (no flash)
+                    // Sked button: fill DX field AND refresh popup content smoothly
                     const skedBtn = document.getElementById(`sked-${sanitizedCallsign}`);
                     if (skedBtn) {
-                        skedBtn.onclick = null; // prevent duplicates
+                        skedBtn.onclick = null;
                         skedBtn.addEventListener('click', () => {
-                            // Fill DX field and trigger calculations
+                            // Update DX field
                             document.getElementById('dx').value = locator.toUpperCase();
                             document.getElementById('dx').dispatchEvent(new Event('input', { bubbles: true }));
 
-                            // Immediately refresh the open popup with new content (including windows)
+                            // Refresh popup content instantly if open — without closing it
                             if (marker.isPopupOpen()) {
-                                marker.openPopup(); // This re-renders the dynamic content instantly
+                                const popup = marker.getPopup();
+                                if (popup) {
+                                    // Call the dynamic content function again and update
+                                    popup.setContent(marker._popupOptions.content());
+                                    popup.update();
+                                }
                             }
                         });
                     }
