--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -2762,15 +2762,14 @@
                     // Sked button: fill DX field AND refresh popup immediately
                     const skedBtn = document.getElementById(`sked-${sanitizedCallsign}`);
                     if (skedBtn) {
-                        skedBtn.onclick = null; // prevent duplicates
+                        skedBtn.onclick = null;
                         skedBtn.addEventListener('click', () => {
-                            // Fill DX field and trigger calculations
                             document.getElementById('dx').value = locator.toUpperCase();
                             document.getElementById('dx').dispatchEvent(new Event('input', { bubbles: true }));
 
-                            // Immediately refresh the open popup with new content (including windows)
+                            // Refresh open popup instantly and smoothly
                             if (marker.isPopupOpen()) {
-                                marker.openPopup(); // This re-renders the dynamic content instantly
+                                marker.getPopup().update();
                             }
                         });
                     }
